--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,29 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title><%= message %></title>
+    <title></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
-    <p><%= message %></p>
+
+  <form method="GET">
+    <input type="number" name="rating" min="1" max="5" required>
+    <input type="submit" value="Szűrés">
+  </form>
+
+    <table>
+        <tr>
+          <td>Cím</td>
+          <td>Értékelés</td>
+        </tr>
+        <% for(let p of books) { %> 
+          <tr>
+            <td><%= p.title%></td>
+            <td><%= p.rating%></td>
+          </tr>
+        <% } %> 
+      </table>  
+      <br><br>
+      <a href="./books/new">Form</a>
 </body>
 </html>
